[fix] align navbar

--- a/frontend/src/assets/styles/app/_header.scss
+++ b/frontend/src/assets/styles/app/_header.scss
@@ -20,7 +20,6 @@
 		font-weight: normal;
 		font-size: 16px;
 		line-height: 32px;
-		text-align: right;
 
 		--bs-text-opacity: 0.7;
 
